src/snapshots/parse_idb@y0da-new__y0da-new-v8.3.i64__database_creation_version.snap
---
hash: 9931736C24D4658D
source: src/test.rs
expression: database_creation_version
---
Some("7.6\0")