src/snapshots/parse_idb@y0da-new__y0da-new-v8.3.i64__entry_points.snap
---
source: src/test.rs
expression: entry_points
---
- name: start
  address: 6442657537
  forwarded: ~
  entry_type:
    comment: ~
    is_const: false
    is_volatile: false
    type_variant:
      Function:
        calling_convention: Fastcall
        ret:
          comment: ~
          is_const: false
          is_volatile: false
          type_variant:
            Basic:
              Int:
                is_signed: ~
        args:
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Basic:
                  Int:
                    is_signed: ~
            loc: ~
            flags: ~
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Pointer:
                  closure: Default
                  modifier: ~
                  shifted: ~
                  typ:
                    comment: ~
                    is_const: false
                    is_volatile: false
                    type_variant:
                      Pointer:
                        closure: Default
                        modifier: ~
                        shifted: ~
                        typ:
                          comment: ~
                          is_const: true
                          is_volatile: false
                          type_variant:
                            Basic: Char
            loc: ~
            flags: ~
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Pointer:
                  closure: Default
                  modifier: ~
                  shifted: ~
                  typ:
                    comment: ~
                    is_const: false
                    is_volatile: false
                    type_variant:
                      Pointer:
                        closure: Default
                        modifier: ~
                        shifted: ~
                        typ:
                          comment: ~
                          is_const: true
                          is_volatile: false
                          type_variant:
                            Basic: Char
            loc: ~
            flags: ~
        retloc: ~
        method: ~
        is_noret: false
        is_pure: false
        is_high: false
        is_static: false
        is_virtual: false
        is_const: false
        is_constructor: false
        is_destructor: false
- name: new_start
  address: 6443322336
  forwarded: ~
  entry_type:
    comment: ~
    is_const: false
    is_volatile: false
    type_variant:
      Function:
        calling_convention: Fastcall
        ret:
          comment: ~
          is_const: false
          is_volatile: false
          type_variant:
            Basic:
              Int:
                is_signed: ~
        args:
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Basic:
                  Int:
                    is_signed: ~
            loc: ~
            flags: ~
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Pointer:
                  closure: Default
                  modifier: ~
                  shifted: ~
                  typ:
                    comment: ~
                    is_const: false
                    is_volatile: false
                    type_variant:
                      Pointer:
                        closure: Default
                        modifier: ~
                        shifted: ~
                        typ:
                          comment: ~
                          is_const: true
                          is_volatile: false
                          type_variant:
                            Basic: Char
            loc: ~
            flags: ~
          - name: ~
            comment: ~
            ty:
              comment: ~
              is_const: false
              is_volatile: false
              type_variant:
                Pointer:
                  closure: Default
                  modifier: ~
                  shifted: ~
                  typ:
                    comment: ~
                    is_const: false
                    is_volatile: false
                    type_variant:
                      Pointer:
                        closure: Default
                        modifier: ~
                        shifted: ~
                        typ:
                          comment: ~
                          is_const: true
                          is_volatile: false
                          type_variant:
                            Basic: Char
            loc: ~
            flags: ~
        retloc: ~
        method: ~
        is_noret: false
        is_pure: false
        is_high: false
        is_static: false
        is_virtual: false
        is_const: false
        is_constructor: false
        is_destructor: false
