src/snapshots/parse_idb@y0da-new__y0da-new-v8.3.i64__input_file.snap
---
hash: F7491059FFB5D2B0
source: src/test.rs
expression: input_file
---
"C:\\Temp\\idbs\\y0da\\EXE\\y0da-new.exe\0"