src/snapshots/parse_idb@y0da-new__y0da-new-v8.3.i64__nam.snap
---
hash: CB1642F05FE1F7DA
source: src/test.rs
expression: nam
---
Some((
 names: [
  (6442450944),
  (6442456224),
  (6442457379),
  (6442463041),
  (6442479020),
  (6442485055),
  (6442503042),
  (6442504257),
  (6442509603),
  (6442512467),
  (6442512529),
  (6442536228),
  (6442548664),
  (6442550483),
  (6442563398),
  (6442564470),
  (6442567388),
  (6442570593),
  (6442583044),
  (6442587894),
  (6442604973),
  (6442609386),
  (6442621680),
  (6442630623),
  (6442633058),
  (6442633068),
  (6442649405),
  (6442651616),
  (6442657537),
  (6442670290),
  (6442671198),
  (6442672919),
  (6442673795),
  (6442677487),
  (6442683978),
  (6442698210),
  (6442700510),
  (6442706352),
  (6442710184),
  (6442713193),
  (6442715383),
  (6442717245),
  (6442717513),
  (6442717520),
  (6442727251),
  (6442730925),
  (6442742031),
  (6442750604),
  (6442750830),
  (6442759507),
  (6442767836),
  (6442770128),
  (6442770663),
  (6442776078),
  (6442779096),
  (6442781720),
  (6442781871),
  (6442782338),
  (6442787771),
  (6442790560),
  (6442801584),
  (6442821325),
  (6442824604),
  (6442827213),
  (6442839392),
  (6442856532),
  (6442880168),
  (6442880184),
  (6442880200),
  (6442880216),
  (6442880232),
  (6442895312),
  (6442895376),
  (6442895424),
  (6442895664),
  (6442895744),
  (6442895824),
  (6442895904),
  (6442895936),
  (6442895992),
  (6442896024),
  (6442896040),
  (6442896088),
  (6442896096),
  (6442896128),
  (6442896160),
  (6442896192),
  (6442896248),
  (6442896264),
  (6442896304),
  (6442896328),
  (6442896352),
  (6442896552),
  (6442896608),
  (6442896688),
  (6442896704),
  (6442896760),
  (6442896832),
  (6442896896),
  (6442896920),
  (6442897472),
  (6442897496),
  (6442897528),
  (6442897568),
  (6442897624),
  (6442897648),
  (6442898136),
  (6442898152),
  (6442898192),
  (6442898280),
  (6442898448),
  (6442898464),
  (6442898496),
  (6442898528),
  (6442898568),
  (6442898672),
  (6442898696),
  (6442898728),
  (6442900040),
  (6442900064),
  (6442900080),
  (6442900096),
  (6442900120),
  (6442900144),
  (6442900160),
  (6442900184),
  (6442900208),
  (6442900232),
  (6442900264),
  (6442900288),
  (6442900312),
  (6442900336),
  (6442900368),
  (6442900392),
  (6442900416),
  (6442900440),
  (6442900464),
  (6442900480),
  (6442900504),
  (6442900536),
  (6442900568),
  (6442900592),
  (6442900616),
  (6442900640),
  (6442900664),
  (6442900696),
  (6442900712),
  (6442900736),
  (6442900760),
  (6442900776),
  (6442900800),
  (6442900824),
  (6442900848),
  (6442900864),
  (6442900888),
  (6442900904),
  (6442900920),
  (6442900944),
  (6442900960),
  (6442900984),
  (6442901000),
  (6442901016),
  (6442901040),
  (6442901064),
  (6442901088),
  (6442901104),
  (6442901128),
  (6442901160),
  (6442901176),
  (6442901200),
  (6442901224),
  (6442901248),
  (6442901272),
  (6442901288),
  (6442901312),
  (6442901328),
  (6442901344),
  (6442901368),
  (6442901400),
  (6442901424),
  (6442901448),
  (6442901480),
  (6442901504),
  (6442901520),
  (6442901544),
  (6442901568),
  (6442901592),
  (6442901632),
  (6442901648),
  (6442901664),
  (6442901680),
  (6442901696),
  (6442901712),
  (6442901736),
  (6442901752),
  (6442901776),
  (6442901784),
  (6442901808),
  (6442901824),
  (6442901848),
  (6442901872),
  (6442901904),
  (6442901920),
  (6442901936),
  (6442901952),
  (6442901968),
  (6442901984),
  (6442902000),
  (6442902024),
  (6442902048),
  (6442902072),
  (6442902096),
  (6442902112),
  (6442902128),
  (6442902152),
  (6442902176),
  (6442902208),
  (6442902232),
  (6442902256),
  (6442902272),
  (6442902288),
  (6442902304),
  (6442902336),
  (6442902352),
  (6442902384),
  (6442902400),
  (6442902464),
  (6442902544),
  (6442902624),
  (6442902704),
  (6442902800),
  (6442902912),
  (6442902928),
  (6442902940),
  (6442902952),
  (6442902968),
  (6442903008),
  (6442903032),
  (6442903064),
  (6442903136),
  (6442903160),
  (6442903200),
  (6442903224),
  (6442903244),
  (6442903248),
  (6442903304),
  (6442903320),
  (6442903344),
  (6442903392),
  (6442903544),
  (6442903768),
  (6442903800),
  (6442903936),
  (6442903992),
  (6442904016),
  (6442904080),
  (6442904144),
  (6442904224),
  (6442904304),
  (6442904368),
  (6442904432),
  (6442904496),
  (6442904528),
  (6442904600),
  (6442904640),
  (6442904688),
  (6442904736),
  (6442904792),
  (6442904808),
  (6442904820),
  (6442904832),
  (6442904872),
  (6442904928),
  (6442905000),
  (6442905184),
  (6442905264),
  (6442917480),
  (6442917544),
  (6442917608),
  (6442917664),
  (6442917720),
  (6442917784),
  (6442917832),
  (6442917896),
  (6442917944),
  (6442917992),
  (6442918024),
  (6442934296),
  (6442934328),
  (6442934352),
  (6442934360),
  (6442934400),
  (6442934432),
  (6442934488),
  (6442934512),
  (6442934608),
  (6442934632),
  (6442934880),
  (6442934952),
  (6442935248),
  (6442935304),
  (6442935368),
  (6442935400),
  (6442935416),
  (6442935440),
  (6442935456),
  (6442935464),
  (6442935488),
  (6442935500),
  (6442935536),
  (6442935600),
  (6442935704),
  (6442935736),
  (6442935800),
  (6442935864),
  (6442935928),
  (6442935968),
  (6442935984),
  (6442936064),
  (6442936480),
  (6442936512),
  (6442936552),
  (6442936600),
  (6442936648),
  (6442936704),
  (6442936784),
  (6442936864),
  (6442936944),
  (6442937040),
  (6442937088),
  (6442937112),
  (6442937128),
  (6442937168),
  (6442937184),
  (6442937200),
  (6442937256),
  (6442937280),
  (6442937408),
  (6442937456),
  (6442937536),
  (6442938914),
  (6442939112),
  (6442939128),
  (6442939152),
  (6442939168),
  (6442939200),
  (6442939232),
  (6442939296),
  (6442939344),
  (6442939408),
  (6442939480),
  (6442939552),
  (6442939680),
  (6442939728),
  (6442939744),
  (6442939784),
  (6442939840),
  (6442939912),
  (6442939936),
  (6442939968),
  (6442939984),
  (6442940000),
  (6442940016),
  (6442940040),
  (6442940072),
  (6442940088),
  (6442940104),
  (6442940120),
  (6442940144),
  (6442940168),
  (6442940192),
  (6442940208),
  (6442940224),
  (6442940256),
  (6442940280),
  (6442940304),
  (6442940320),
  (6442940336),
  (6442940360),
  (6442940376),
  (6442940408),
  (6442940432),
  (6442940456),
  (6442940480),
  (6442940504),
  (6442940536),
  (6442940560),
  (6442940584),
  (6442940600),
  (6442940624),
  (6442940648),
  (6442940672),
  (6442940704),
  (6442940736),
  (6442940768),
  (6442940800),
  (6442940824),
  (6442940840),
  (6442940864),
  (6442940888),
  (6442940912),
  (6442940936),
  (6442940960),
  (6442940984),
  (6442941008),
  (6442941024),
  (6442941040),
  (6442941064),
  (6442941080),
  (6442941104),
  (6442941128),
  (6442941144),
  (6442941168),
  (6442941184),
  (6442941208),
  (6442941224),
  (6442941248),
  (6442941280),
  (6442941296),
  (6442941312),
  (6442941328),
  (6442941352),
  (6442941376),
  (6442941408),
  (6442941456),
  (6442941480),
  (6442941504),
  (6442941528),
  (6442941552),
  (6442941584),
  (6442941608),
  (6442941632),
  (6442941664),
  (6442941688),
  (6442941720),
  (6442941752),
  (6442941768),
  (6442941784),
  (6442941800),
  (6442941824),
  (6442941848),
  (6442941880),
  (6442941896),
  (6442941936),
  (6442941968),
  (6442942008),
  (6442942040),
  (6442942072),
  (6442942104),
  (6442942128),
  (6442942160),
  (6442942192),
  (6442942216),
  (6442942232),
  (6442942256),
  (6442942280),
  (6442942304),
  (6442942320),
  (6442942336),
  (6442942352),
  (6442942384),
  (6442942408),
  (6442942432),
  (6442942448),
  (6442942472),
  (6442942496),
  (6442942528),
  (6442942560),
  (6442942576),
  (6442942600),
  (6442942616),
  (6442942632),
  (6442942656),
  (6442942680),
  (6442942696),
  (6442942704),
  (6442942728),
  (6442942752),
  (6442942776),
  (6442942792),
  (6442942808),
  (6442942824),
  (6442942848),
  (6442942864),
  (6442942880),
  (6442942904),
  (6442942928),
  (6442942952),
  (6442942968),
  (6442942984),
  (6442943008),
  (6442943016),
  (6442943040),
  (6442943056),
  (6442943072),
  (6442943096),
  (6442943120),
  (6442943136),
  (6442943152),
  (6442943168),
  (6442987856),
  (6442987888),
  (6442987912),
  (6442988296),
  (6443004096),
  (6443004112),
  (6443004136),
  (6443004152),
  (6443004176),
  (6443004192),
  (6443004216),
  (6443004232),
  (6443004264),
  (6443004280),
  (6443004304),
  (6443004320),
  (6443004352),
  (6443004368),
  (6443004384),
  (6443004400),
  (6443004448),
  (6443004464),
  (6443004968),
  (6443270472),
  (6443274240),
  (6443292384),
  (6443292432),
  (6443292464),
  (6443292512),
  (6443292544),
  (6443292896),
  (6443293616),
  (6443322224),
  (6443322336),
  (6443322352),
  (6443322384),
  (6443322400),
  (6443324512),
  (6443324550),
  (6443324560),
  (6443324608),
  (6443324848),
  (6443326080),
  (6443326240),
  (6443326336),
  (6443326368),
  (6443327200),
  (6443327408),
  (6443327536),
  (6443327568),
  (6443332144),
  (6443332272),
  (6443332320),
  (6443332544),
  (6443333664),
  (6443334080),
  (6443334176),
  (6443334480),
  (6443334640),
  (6443341488),
  (6443341520),
  (6443341536),
  (6443341776),
  (6443342112),
  (6443342176),
  (6443342256),
  (6443342448),
  (6443343136),
  (6443343232),
  (6443343408),
  (6443348944),
  (6443349040),
  (6443349152),
  (6443349552),
  (6443350928),
  (6443352992),
  (6443353040),
  (6443353296),
  (6443353360),
  (6443353744),
  (6443353808),
  (6443353840),
  (6443353872),
  (6443353904),
  (6443353936),
  (6443354064),
  (6443354144),
  (6443354416),
  (6443354448),
  (6443354480),
  (6443354560),
  (6443354624),
  (140736777077448),
  (140736777731368),
  (140736793046744),
  (140736793046752),
 ],
))